mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2024 Git.Training
+	Adding changes before rebase conflicts
 -->
 <head>
 	<title>An Example Website</title>
