--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebase conflicts
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Example Website test </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,6 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			text text text 
 		</p>
 	</main>
 	<footer class="container">
