--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
-			text text text - testing something on bm
+			text text text 
 		</p>
 	</main>
 	<footer class="container">
