Adding changes after rebasing content

--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,7 @@
 	Copyright 2024 Git.Training
 	Adding changes before rebase conflicts
 	branch bigtrouble
+	rebasin successfully
 -->
 <head>
 	<title>An Example Website test </title>
@@ -20,7 +21,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
-			text text text 
+			Adding changes after rebasing content
 		</p>
 	</main>
 	<footer class="container">
